@@ -257,7 +257,12 @@ soup_gnutls_close (GIOChannel  *channel,
 	SoupGNUTLSChannel *chan = (SoupGNUTLSChannel *) channel;
 
 	if (chan->established) {
-		gnutls_bye (chan->session, GNUTLS_SHUT_RDWR);
+		int ret;
+
+		do {
+			ret = gnutls_bye (chan->session, GNUTLS_SHUT_RDWR);
+		} while (ret == GNUTLS_E_INTERRUPTED ||
+			 ret == GNUTLS_E_AGAIN);
 	}
 
 #if 0
